feat: implement double-click on theme toggle for chat access; remove color sequence

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ POSTGRES_URL="postgresql://user:password@host:5432/database"
 DATABASE_URL="postgresql://user:password@host:5432/database"
 
 # JWT Secret (IMPORTANT: Change this in production!)
-JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
+JWT_SECRET=rNo4PV9k6NbRUcZdxx6vKm+QSUG4WhHHavjYP9RfVLw=
 
 # Vercel Blob Storage (for image uploads)
 BLOB_READ_WRITE_TOKEN="your-vercel-blob-token"
