--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@clerk/nextjs": "^4.29.9",
     "@neondatabase/serverless": "^0.9.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie": "^0.6.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/ws": "^8.18.1",
     "@vercel/blob": "^0.23.4",
     "@vercel/postgres": "^0.10.0",
     "bcryptjs": "^3.0.3",
     "browser-image-compression": "^2.0.2",
+    "cookie": "^1.0.2",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.30.10",
     "jsonwebtoken": "^9.0.2",
